# ChangeLog for media-gfx/seqdiag
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  07 Jul 2011; James Rowe <jnrowe@gmail.com> -seqdiag-0.3.3.ebuild,
  seqdiag-0.3.5.ebuild:
  Keyworded x86.

  07 Jul 2011; James Rowe <jnrowe@gmail.com> seqdiag-0.3.5.ebuild:
  Keyworded amd64.

  16 Jun 2011; James Rowe <jnrowe@gmail.com> -seqdiag-0.3.1.ebuild,
  seqdiag-0.3.3.ebuild:
  Keyworded x86.

  16 Jun 2011; James Rowe <jnrowe@gmail.com> seqdiag-0.3.3.ebuild:
  Keyworded amd64.

  08 Jun 2011; James Rowe <jnrowe@gmail.com> -seqdiag-0.2.7.ebuild,
  seqdiag-0.3.1.ebuild:
  Keyworded x86.

  07 Jun 2011; James Rowe <jnrowe@gmail.com> seqdiag-0.3.1.ebuild:
  Keyworded amd64.

*seqdiag-0.3.5 (07 Jun 2011)

  07 Jun 2011; James Rowe <jnrowe@gmail.com> +seqdiag-0.3.5.ebuild:
  Version bump [380].

  27 May 2011; James Rowe <jnrowe@gmail.com> -seqdiag-0.2.5.ebuild,
  seqdiag-0.2.7.ebuild:
  Keyworded x86.

  25 May 2011; James Rowe <jnrowe@gmail.com> seqdiag-0.2.7.ebuild:
  Keyworded amd64.

*seqdiag-0.3.3 (17 May 2011)

  17 May 2011; James Rowe <jnrowe@gmail.com> +seqdiag-0.3.3.ebuild:
  Version bump [370].

  13 May 2011; James Rowe <jnrowe@gmail.com> seqdiag-0.2.7.ebuild,
  seqdiag-0.3.1.ebuild:
  Fix inverted USE=minimal test.

*seqdiag-0.3.1 (09 May 2011)

  09 May 2011; James Rowe <jnrowe@gmail.com> +seqdiag-0.3.1.ebuild:
  Version bump [354].

  07 May 2011; James Rowe <jnrowe@gmail.com> -seqdiag-0.2.1.ebuild,
  seqdiag-0.2.5.ebuild:
  Keyworded x86.

  07 May 2011; James Rowe <jnrowe@gmail.com> seqdiag-0.2.5.ebuild:
  Keyworded amd64.

*seqdiag-0.2.7 (25 Apr 2011)

  25 Apr 2011; James Rowe <jnrowe@gmail.com> +seqdiag-0.2.7.ebuild:
  Version bump [347].

*seqdiag-0.2.5 (07 Apr 2011)

  07 Apr 2011; James Rowe <jnrowe@gmail.com> +seqdiag-0.2.5.ebuild:
  Version bump [310].

  04 Apr 2011; James Rowe <jnrowe@gmail.com> -seqdiag-0.1.7.ebuild,
  seqdiag-0.2.1.ebuild:
  Keyworded x86.
