@@ -51,6 +51,7 @@
  * Versions:
 
   * `0.3.5 <https://github.com/JNRowe/misc-overlay/blob/master/media-gfx/seqdiag/seqdiag-0.3.5.ebuild>`__  ``amd64``, ``x86``
+  * `0.3.7 <https://github.com/JNRowe/misc-overlay/blob/master/media-gfx/seqdiag/seqdiag-0.3.7.ebuild>`__  ``~amd64`` (due 2011-08-08), ``~x86`` (due 2011-08-08)
 
 * ``sng`` - http://www.catb.org/~esr/sng/
 
