@@ -2,14 +2,16 @@
 Hash: SHA512
 
 DIST seqdiag-0.3.5.tar.gz 23276 RMD160 2bc7fc1e44b11b70e09dca0672e6687242faa5a9 SHA1 e8201b5b541ea0241285e55712939612c87ccffa SHA256 5391d28d516d84b9a12081b47d2183dd727330073dfccf53dd3c57171557b328
+DIST seqdiag-0.3.7.tar.gz 23227 RMD160 4e86db84f7c229d7a25235cad096ff3c44c135cd SHA1 871574de832a4e2ec441c3a5ef90af3a6fe30914 SHA256 f4611dc1b597cedf3bf93686c0f35d14198f93a0fd63c52eebf0b98a8078653b
 EBUILD seqdiag-0.3.5.ebuild 1315 RMD160 90894b7dd91bf828ec486d3981624a8cc9752fa4 SHA1 9947fd774fc1bff8e7d6286c65dad7390b713e5f SHA256 92a7a63a0ba26825181bf1d6d0efaa0d074d58f5c7b9497d3b612b21d0fc83b7
-MISC ChangeLog 2818 RMD160 6c3d7cab769beaa022f357589a9240fbbf0f2d0c SHA1 d07d8110a77a48958565f0095e771f0a4349a5e2 SHA256 1c1deaa790efeaf2d7a1c2e394ee071befdfb779448e96ae889b3a4f3d674065
-MISC metadata.xml 570 RMD160 59bfcf070c7d4c7572454863d588c77bc1c1b55c SHA1 032a17bdf85ce580d75f65ce1d630dbaa1c10fc8 SHA256 a6dc2ad7ee618a09643e701df56441097c7973bb55e4077d002d196ac0ad50cb
+EBUILD seqdiag-0.3.7.ebuild 1317 RMD160 a8ad2983292acc3ab32fc6123167f18bd7222f17 SHA1 53240b4c518dd3698f9503ea03dffdf1b153de8b SHA256 a991fa79d33108cc57d0b141c171224fe8b252816ac043577e7fd8de489a5061
+MISC ChangeLog 2955 RMD160 5177e43ac2be8171e98dec8861951c87b06efb09 SHA1 0d877bfafb17c3c9ac3f49622598e7fd0a1e4c79 SHA256 09d40b566d1ef21be568881661d9e1bb00df7eb27d204953aa254f7d8536b3fd
+MISC metadata.xml 737 RMD160 daa7f9957b3fc3894f0f78237464ed9956b8c655 SHA1 8fee026aa52fb789681b980c3419dcc84f9b1e72 SHA256 bb00683f8fa5214cf54a8b2eb1a3dcb003e343e57765cff57ccf34fd8d84a3ec
 MISC watch 12 RMD160 93a2adec9e10f09240c494996f1b879ab1a61113 SHA1 d61fd79473fa9466604269b1d76a71d70ed24b7a SHA256 806ffafa2258c82b35917a67c5f7faff76604958adae5efb722ca9ef82ee2874
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iEYEAREKAAYFAk4VssgACgkQzJrj3cAXR0mMOACgmenZv6NRGfDhqzDztqhK+Z0H
-RHcAoJbCqGha97IgrrGzoscW6v7TPol0
-=xKzG
+iEYEAREKAAYFAk4YaUwACgkQzJrj3cAXR0mUWACghX3rfsgRbwMLleslkVwPi+gl
+DScAoJ287jZpB2TgWo7lKKRHngoPt4wh
+=u+vA
 -----END PGP SIGNATURE-----
