@@ -16,5 +16,7 @@
 	</longdescription>
 	<upstream>
 		<remote-id type="pypi">seqdiag</remote-id>
+		<doc lang="en">http://blockdiag.com/seqdiag/build/html/index.html</doc>
+		<bugs-to>http://bitbucket.org/tk0miya/seqdiag/issues/?status=new&amp;status=open</bugs-to>
 	</upstream>
 </pkgmetadata>
