@@ -1,0 +1,22 @@
+dev-python/setuptools test? ( dev-python/pep8 ) >=app-admin/eselect-python-20091230 || ( =dev-lang/python-2.7* =dev-lang/python-2.6* =dev-lang/python-2.5* ) test? ( dev-python/nose )
+dev-python/setuptools dev-python/funcparserlib dev-python/imaging >=media-gfx/blockdiag-0.8.1 !minimal? ( dev-python/sphinx ) pdf? ( dev-python/reportlab ) >=app-admin/eselect-python-20091230 || ( =dev-lang/python-2.7* =dev-lang/python-2.6* =dev-lang/python-2.5* )
+0
+mirror://pypi/s/seqdiag/seqdiag-0.3.7.tar.gz
+
+http://pypi.python.org/pypi/seqdiag/
+Apache-2.0
+Generate sequence-diagram image files from spec-text files
+~amd64 ~x86
+distutils eutils jnrowe-pypi multilib portability python toolchain-funcs
+examples minimal pdf test test
+
+
+
+3
+
+compile install postinst postrm prepare test
+
+
+
+
+
