@@ -75,6 +75,8 @@
 * media-gfx/nwdiag-0.2.7                      x86 SCHEDULED: <2011-08-08 Mon>
 * dev-python/pgmagick-0.4                   amd64 SCHEDULED: <2011-08-08 Mon>
 * dev-python/pgmagick-0.4                     x86 SCHEDULED: <2011-08-08 Mon>
+* media-gfx/seqdiag-0.3.7                   amd64 SCHEDULED: <2011-08-08 Mon>
+* media-gfx/seqdiag-0.3.7                     x86 SCHEDULED: <2011-08-08 Mon>
 * dev-perl/Net-Twitter-Lite-0.10004         amd64 SCHEDULED: <2011-08-15 Mon>
 * dev-perl/Net-Twitter-Lite-0.10004           x86 SCHEDULED: <2011-08-15 Mon>
 * dev-python/twython-1.4.2                  amd64 SCHEDULED: <2011-08-16 Tue>
